--- a/bsstyle.css
+++ b/bsstyle.css
@@ -3,15 +3,21 @@
 .bprocess{position: relative;text-align: center;width: 100%; display: block;margin-bottom: 20px;}
 .leader .bprocess{width: auto;display: inline-block;}
 .bpmembers{height: 100%; width: 100%;}
-.bpmembers img {height: 150px;width:150px;}
-.leader img{width: 200px !important;height: 200px !important; margin-right:0px;}
+.bpmembers img {height: 150px;}
+/*.leader img{width: 200px !important;height: 200px !important; margin-right:0px;}*/
 #ec, .bpname{background:rgba(0, 0, 0, 0.5); color: white; cursor: pointer;transition: background .25s ease, color .5s ease;}
 #ec:hover, .bpname:hover/*, .bpname.no*/{background: rgba(255,5,5,0.7);color: white;}
 .bphide{display: none;}
 .bpmember{display: inline-block;position: relative;cursor: pointer;}
 .membercap{opacity:0;width:100%;position: absolute;bottom:0px;padding: 10px 0;color: white;background: rgba(0,0,0,.5); transition: opacity .5s ease;}
+.bpimg {
+    border-radius: 50%;
+    overflow: hidden;
+    width: 150px;
+    height: 150px;
+}
 .bpimg:hover + .membercap{opacity:1;}
-.bpimg img{border-radius:50%;-webkit-filter: grayscale(1); -moz-filter: grayscale(1); filter: grayscale(1); transition: -webkit-filter .5s ease, -moz-filter .5s ease, filter .5s ease,opacity .5s ease; opacity: .8;}
+.bpimg img{-webkit-filter: grayscale(1); -moz-filter: grayscale(1); filter: grayscale(1); transition: -webkit-filter .5s ease, -moz-filter .5s ease, filter .5s ease,opacity .5s ease; opacity: .8;}
 .bpimg img:hover{-webkit-filter: grayscale(0);-moz-filter: grayscale(0);filter:grayscale(0);opacity: 1;}
 .bpbio{text-align: justify; color: white; background: rgba(0,0,0,0.3);padding:5px 10px;}
 .bpcolor{-webkit-filter: grayscale(0) !important;  -moz-filter: grayscale(0) !important; filter: grayscale(0) !important; opacity:1 !important;}
