--- a/admin.css
+++ b/admin.css
@@ -4,6 +4,7 @@
 .intro #mtitle{font-family: 'Jura', sans-serif; display:block;font-size: 50px; background:rgb(51,153,255);text-align: center;height:80px;line-height: 80px;color:white;}
 .intro p {font-size: 14px;}
 .bsrow {white-space: nowrap;border-left: 10px solid transparent; padding: 10px; display: inline-block; transition: border-left .3s ease;}
+.bsrow textarea { min-height: 50px;}
 .bsrow:hover {border-left: 10px solid #3399ff;}
 .bsid, .bsauth {display: none;}
 .bsh {width:170px; font-size:25px;}
@@ -32,10 +33,9 @@
     width:100px;
     height:100px;
     background-image: none;
-	background-size: 100px 100px;
+    background-size: 100px 100px;
     background-repeat: no-repeat;
     display: none;
-	border: 1px solid gray;
-	//border-radius:50%;
-	
+    border: 1px solid gray;
+    /*border-radius:50%;*/
 }
