--- a/bsstyle.css
+++ b/bsstyle.css
@@ -1,15 +1,17 @@
 
 #ec, .leader {text-align: center; margin-bottom: 20px;}
-.bprocess{position: relative;text-align: center;width: 100%; display: block;margin-bottom: 20px;}
+.bprocess{position: relative;text-align: center;width: 100%; display: none;padding: 0 15px;
+    flex-direction: column;height:100%;}
 .leader .bprocess{width: auto;display: inline-block;}
-.bpmembers{height: 100%; width: 100%;}
+.bpmembers{width: 100%;}
 .bpmembers img {height: 150px;}
 /*.leader img{width: 200px !important;height: 200px !important; margin-right:0px;}*/
-#ec, .bpname{background:rgba(0, 0, 0, 0.5); color: white; cursor: pointer;transition: background .25s ease, color .5s ease;}
-#ec:hover, .bpname:hover/*, .bpname.no*/{background: rgba(255,5,5,0.7);color: white;}
+#ec, .bpname{background:#08a5de; color: white; cursor: pointer;transition: background .25s ease, color .5s ease;}
+#ec:hover, .bpname:hover/*, .bpname.no*/{background: #08a5de;color: white;}
 .bphide{display: none;}
 .bpmember{display: inline-block;position: relative;cursor: pointer;}
-.membercap{opacity:0;width:100%;position: absolute;bottom:0px;padding: 10px 0;color: white;background: rgba(0,0,0,.5); transition: opacity .5s ease;}
+.membercap{opacity:1;width:100%;position: absolute;bottom:0px;padding: 3px 0;color: white;background: rgba(8, 165, 222, 0.7); transition: opacity .5s ease;}
+.bpmember.active .membercap {background:#08a5de;}
 .bpimg {
     border-radius: 50%;
     overflow: hidden;
@@ -19,6 +21,30 @@
 .bpimg:hover + .membercap{opacity:1;}
 .bpimg img{-webkit-filter: grayscale(1); -moz-filter: grayscale(1); filter: grayscale(1); transition: -webkit-filter .5s ease, -moz-filter .5s ease, filter .5s ease,opacity .5s ease; opacity: .8;}
 .bpimg img:hover{-webkit-filter: grayscale(0);-moz-filter: grayscale(0);filter:grayscale(0);opacity: 1;}
-.bpbio{text-align: justify; color: white; background: rgba(0,0,0,0.3);padding:5px 10px;}
+.bpbio{text-align: justify; color: white; background: #08a5de;padding: 5px 10px;}
 .bpcolor{-webkit-filter: grayscale(0) !important;  -moz-filter: grayscale(0) !important; filter: grayscale(0) !important; opacity:1 !important;}
-#bstooltip{display:none;z-index:10000;position: absolute; padding: 10px; background: rgba(0,0,0,0.7);white-space: nowrap;border-radius:5px;}
+#bstooltip{display:none;z-index:10000;position: absolute; padding: 10px; background: #08a5de;white-space: nowrap;border-radius:5px;}
+
+
+.bp-wrapper {
+    display: flex;
+}
+#bp-navigator {
+    min-width: 160px;
+}
+#bp-content {
+    flex-grow: 1;
+}
+.bprocess.active {
+    display: flex;
+}
+.bp-nav-item {
+    cursor: pointer;
+    padding: 5px;
+    margin-bottom: 2px;
+    transition: background-color .25s ease;
+}
+.bp-nav-item.active, .bp-nav-item:hover {
+    background-color: #08a5de;
+    color: white;
+}
